# grocery-recommender

./: README.md  main.py  pyproject.toml  pytest.ini
apps/agent/: README.md  constants.py  orchestrator.py
apps/agent/assets/: catalog.txt  parser_prompt.txt  recommender_prompt.txt
apps/agent/clients/: api_client.py  openai_client.py
apps/agent/dependencies/: constants.py  exceptions.py
apps/agent/models/: models.py
apps/agent/services/: base_llm.py  fuzzy_filter.py  inventory.py  parser.py  recommender.py
apps/api_server/: README.md  grocery.py
apps/api_server/assets/: create.sql  grocery.postman_collection.json  openapi.json  seed.sql
apps/api_server/controllers/: products.py
apps/api_server/dependencies/: constants.py  database.py  scripts.py
apps/api_server/models/: products.py
apps/api_server/routers/: products.py
apps/api_server/schemas/: products.py
apps/web_app/: README.md  agent_interface.py  file_uploader.py
apps/web_app/templates/: recommendations.html  upload.html
tests/agent/: conftest.py  test_orchestrator.py
tests/agent/clients/: test_api_client.py  test_openai_client.py
tests/agent/services/: test_fuzzy_filter.py  test_inventory.py  test_parser.py  test_recommender.py
tests/api_server/: conftest.py  test_grocery.py
tests/api_server/dependencies/: test_database.py  test_scripts.py
tests/api_server/routers/: test_products.py
tests/results/: .coveragerc
tests/web_app/: conftest.py  test_agent_interface.py  test_file_uploader.py
tests/web_app/test_files/: list.txt  mocked_response.json
(+20 files in other folders)
